--- a/style1.css
+++ b/style1.css
@@ -3,7 +3,7 @@ body {
     margin: 0;
     padding: 0;
     font-family: "Poppins", sans-serif;
-    background: url('images/rajesh\ yoga.jpg') no-repeat center center/cover;
+    background: url('rajesh\ yoga.jpg') no-repeat center center/cover;
     height: 100vh;
     display: flex;
     justify-content: center;
@@ -58,4 +58,5 @@ body {
     from { opacity: 0; transform: translateY(20px); }
     to { opacity: 1; transform: translateY(0); }
 }
+
 
